@@ -46,8 +46,10 @@ void
 crofchantest::test1()
 {
 	keep_running = true;
-	num_of_conns = 16;
+	num_of_conns = 32;
 	num_of_accepts = 0;
+	num_of_dpt_established = 0;
+	num_of_ctl_established = 0;
 	int seconds = 20;
 
 	listening_port = 0;
@@ -62,7 +64,7 @@ crofchantest::test1()
 			std::cerr << "trying listening port=" << (int)listening_port << std::endl;
 			baddr = rofl::csockaddr(rofl::caddress_in4("127.0.0.1"), listening_port);
 			/* try to bind address first */
-			rofsock->set_trace(trace);
+			rofsock->set_trace(false);
 			rofsock->set_backlog(num_of_conns);
 			rofsock->set_baddr(baddr).listen();
 			std::cerr << "binding to " << baddr.str() << std::endl;
@@ -77,14 +79,16 @@ crofchantest::test1()
 		rofl::crofconn& conn = channel1->add_conn(rofl::cauxid(i));
 
 		conn.set_trace(trace);
-		conn.set_journal().log_on_stderr(false);
-		conn.set_tcp_journal().log_on_stderr(false);
+		conn.set_journal().log_on_stderr(true);
+		conn.set_tcp_journal().log_on_stderr(true);
 
 		conn.set_raddr(baddr).
-				  tcp_connect(versionbitmap, rofl::crofconn::MODE_CONTROLLER, false);
+				  tcp_connect(versionbitmap, rofl::crofconn::MODE_DATAPATH, false);
+
+		num_of_dpt_established++;
 
 		std::cerr << "auxid(" << i << "): connecting to " << baddr.str() << std::endl;
-		//sleep(2);
+		//sleep(1);
 	}
 
 	while (keep_running && (seconds-- > 0)) {
@@ -93,10 +97,11 @@ crofchantest::test1()
 		ts.tv_nsec = 0;
 		pselect(0, NULL, NULL, NULL, &ts, NULL);
 		std::cerr << ".";
-		if (num_of_accepts == num_of_conns) {
+		if (num_of_ctl_established == num_of_conns) {
 			break;
 		}
 	}
+	sleep(2);
 
 	std::cerr << ">>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<" << std::endl;
 	std::cerr << ">>>          TERMINATING          <<<" << std::endl;
@@ -105,31 +110,44 @@ crofchantest::test1()
 	std::cerr << ">>>>>>>>>>>>> listen <<<<<<<<<<<<<<" << std::endl;
 	std::cerr << rofsock->get_journal() << std::endl;
 
+	std::cerr << "num_of_ctl_established = " << num_of_ctl_established << std::endl;
+	std::cerr << "num_of_dpt_established = " << num_of_dpt_established << std::endl;
+	std::cerr << "num_of_conns = " << num_of_conns << std::endl;
+	std::cerr << "num_of_accepts = " << num_of_accepts << std::endl;
+	std::cerr << "channel1.size() = " << channel1->keys().size() << std::endl;
+	std::cerr << "channel2.size() = " << channel2->keys().size() << std::endl;
 	CPPUNIT_ASSERT(channel1->keys().size() == num_of_conns);
 	CPPUNIT_ASSERT(channel2->keys().size() == num_of_conns);
 
 	for (auto auxid : channel1->keys()) {
+		std::cerr << ">>>>>>>>>>>>> client(" << (int)auxid.get_id() << ") <<<<<<<<<<<<<<" << std::endl;
 		if (not channel1->has_conn(auxid)) {
 			continue;
 		}
 		const rofl::crofconn& conn = channel1->get_conn(auxid);
-		std::cerr << ">>>>>>>>>>>>> client(" << (int)auxid.get_id() << ") <<<<<<<<<<<<<<" << std::endl;
 		std::cerr << conn.get_journal() << std::endl;
 		std::cerr << conn.get_tcp_journal() << std::endl;
-		channel1->drop_conn(auxid);
 	}
+
 
 	for (auto auxid : channel2->keys()) {
 		if (not channel2->has_conn(auxid)) {
 			continue;
 		}
-		const rofl::crofconn& conn = channel2->get_conn(auxid);
-		std::cerr << ">>>>>>>>>>>>> server(" << (int)auxid.get_id() << ") <<<<<<<<<<<<<<" << std::endl;
-		std::cerr << conn.get_journal() << std::endl;
-		std::cerr << conn.get_tcp_journal() << std::endl;
 		channel2->drop_conn(auxid);
 	}
 
+	for (auto auxid : channel1->keys()) {
+		if (not channel1->has_conn(auxid)) {
+			continue;
+		}
+		channel1->drop_conn(auxid);
+	}
+
+	std::cerr << "num_of_ctl_established = " << num_of_ctl_established << std::endl;
+	std::cerr << "num_of_dpt_established = " << num_of_dpt_established << std::endl;
+	std::cerr << "num_of_conns = " << num_of_conns << std::endl;
+	std::cerr << "num_of_accepts = " << num_of_accepts << std::endl;
 	std::cerr << "channel1.size() = " << channel1->keys().size() << std::endl;
 	std::cerr << "channel2.size() = " << channel2->keys().size() << std::endl;
 	CPPUNIT_ASSERT(channel1->keys().size() == 0);
@@ -144,25 +162,38 @@ crofchantest::handle_listen(
 		rofl::crofsock& socket, int sd)
 {
 	num_of_accepts++;
+	std::cerr << "num_of_accepts = " << num_of_accepts << std::endl;
 
-	std::cerr << rofsock->get_journal() << std::endl;
+	rofl::crofconn* conn = new rofl::crofconn(this);
+	conn->set_trace(true).tcp_accept(sd, versionbitmap, rofl::crofconn::MODE_CONTROLLER);
+}
 
-	rofl::crofconn& conn = channel2->add_conn();
+
+
+void
+crofchantest::handle_established(
+		rofl::crofconn& conn, uint8_t ofp_version)
+{
+	channel2->add_conn(&conn);
 	conn.set_trace(trace);
 	conn.set_journal().log_on_stderr(false);
 	conn.set_tcp_journal().log_on_stderr(false);
-	conn.set_trace(true).tcp_accept(sd, versionbitmap, rofl::crofconn::MODE_DATAPATH);
+
+	//std::cerr << ">>>>>>>>>>>>> server(" << (int)conn.get_auxid().get_id() << ") <<<<<<<<<<<<<<" << std::endl;
+	//std::cerr << conn.get_journal() << std::endl;
+	//std::cerr << conn.get_tcp_journal() << std::endl;
 
 	std::cerr << ">>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<" << std::endl;
-	std::cerr << ">>> crofchantest::handle_listen()" << std::endl;
+	std::cerr << ">>> crofchantest::handle_established() -conn-" << std::endl;
 	std::cerr << ">>> conn.get_auxid() = " << (int)conn.get_auxid().get_id() << std::endl;
 	std::cerr << ">>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<" << std::endl;
 
-	std::cerr << conn.get_journal() << std::endl;
-	std::cerr << conn.get_tcp_journal() << std::endl;
-
 	CPPUNIT_ASSERT(conn.is_established());
+
+	num_of_ctl_established++;
+	std::cerr << "num_of_ctl_established = " << num_of_ctl_established << std::endl;
 }
+
 
 
 
@@ -172,7 +203,7 @@ crofchantest::handle_established(
 {
 	std::cerr << std::endl;
 	std::cerr << ">>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<" << std::endl;
-	std::cerr << ">>> crofchantest::handle_established()" << std::endl;
+	std::cerr << ">>> crofchantest::handle_established() -chan-" << std::endl;
 	std::cerr << ">>> num_of_accepts = " << num_of_accepts << std::endl;
 	std::cerr << ">>> num_of_conns   = " << num_of_conns << std::endl;
 	std::cerr << ">>> channel1.size() = " << channel1->size() << std::endl;
@@ -180,6 +211,14 @@ crofchantest::handle_established(
 	std::cerr << ">>> conn.get_auxid() = " << (int)conn.get_auxid().get_id() << std::endl;
 	std::cerr << ">>>>>>>>>>>>>>>>>><<<<<<<<<<<<<<<<<<<" << std::endl;
 	std::cerr << std::endl;
+
+	//std::cerr << ">>>>>>>>>>>>> client(" << (int)conn.get_auxid().get_id() << ") <<<<<<<<<<<<<<" << std::endl;
+	//std::cerr << conn.get_journal() << std::endl;
+	//std::cerr << conn.get_tcp_journal() << std::endl;
+
+	std::cerr << "crofchan::handle_established" << std::endl;
+
+	CPPUNIT_ASSERT(conn.is_established());
 }
 
 
@@ -192,6 +231,8 @@ crofchantest::handle_recv(
 
 	switch (pmsg->get_type()) {
 	case rofl::openflow13::OFPT_FEATURES_REQUEST: {
+
+		std::cerr << "sending FEATURES-REPLY auxid: " << (int)conn.get_auxid().get_id() << std::endl;
 
 		rofl::openflow::cofmsg_features_reply* msg =
 				new rofl::openflow::cofmsg_features_reply(
