@@ -14,6 +14,8 @@ v0.10.4
 [B] crofchan: fixed a bug introduced in v0.10.3 while fixing
     the other bug: actively established connections must not be
     removed upon handle_closed()
+[B] cthread: check timer for expiration again before calling 
+    handle_timeout()
 
 v0.10.3
 
